# ostatus

./: Cargo.toml  README.md
.github/: dependabot.yml
libsolv-rs/: Cargo.toml
libsolv-rs/src/: chksumtype.rs  lib.rs  map.rs  pool.rs  queue.rs  repo.rs  solvable.rs  solver.rs  transaction.rs
libsolv-sys/: Cargo.toml  build.rs
src/: lib.rs  main.rs
