[package]
name = "ostatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
configparser = "3.0.2"
flate2 = "1.0.26"
git2 = "0.17.2"
librpm = { git = "https://github.com/rpm-software-management/librpm.rs" }
libsolv-rs = { path = "libsolv-rs" }
regex = "1.8.3"
sha2 = "0.10.6"
tempfile = "3.5.0"
xmltree = "0.10.3"

[workspace]
members = [ "libsolv-sys", "libsolv-rs" ]
