[package]
name = "ostatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
configparser = "3.0.2"
flate2 = "1.0.27"
git2 = "0.18.1"
librpm = { git = "https://github.com/rpm-software-management/librpm.rs" }
libsolv-rs = { path = "libsolv-rs" }
regex = "1.10.0"
sha2 = "0.10.8"
tempfile = "3.8.0"
xmltree = "0.10.3"

[workspace]
members = [ "libsolv-sys", "libsolv-rs" ]
