[package]
name = "ostatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.5.2", features = ["derive"] }
configparser = "3.0.4"
flate2 = "1.0.28"
git2 = "0.18.1"
librpm = { git = "https://github.com/rpm-software-management/librpm.rs" }
libsolv-rs = { path = "libsolv-rs" }
regex = "1.10.2"
sha2 = "0.10.8"
tempfile = "3.9.0"
xmltree = "0.10.3"

[workspace]
members = [ "libsolv-sys", "libsolv-rs" ]
